<resources>
    <string name="app_name">ThorED</string>
    <string name="login">Log-in / Sign-in!</string>
    <string name="forgotPwd">Forgot Password?</string>
    <string name="signup">Sign-Up?/Create Account?</string>
    <string name="loginBtn">Log-In</string>
    <string name="signup_ra">Sign-Up / Create Account!</string>
    <string name="signupBtn">Sign-Up</string>
    <string name="welcome">"Welcome"</string>
    <string name="choose">Select your purpose!</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="_1">SQL converter</string>
    <string name="_2">Visualize my DATA</string>
    <string name="_3">Fill my Story!</string>
    <string name="_4">Summarize Paras</string>
    <string name="card1_d">Input your question and get relavant SQL querry</string>
    <string name="card2_d">Enter the opening lines of your Story or give a Plot</string>
    <string name="card4_d">Summary of the Story by Story input or Tiltle Input</string>
    <string name="card3_d">Visualize the Sample data by entering the chat type!</string>
</resources>